fixed squashed columns/rows

--- a/quiz-widgets-dark.css
+++ b/quiz-widgets-dark.css
@@ -1476,8 +1476,8 @@ td img {
 .tableContainer {
 	min-width: 1100px;
 	display: grid;
-	grid-template-columns: 40px repeat(auto-fit, minmax(60px, 1fr));
-	grid-template-rows: 20px repeat(8, 1fr);
+	grid-template-columns: 40px repeat(18, minmax(60px, 1fr));
+	grid-template-rows: 20px repeat(9, 1fr);
 	place-items: center;
 }
 
@@ -1561,15 +1561,15 @@ td img {
 	visibility: hidden;
 }
 
+.selectedElement {
+	background-color: #124d60 !important;
+	color: white
+}
+
 /* specific to dark mode */
 .elementContainer {
 	color: black;
 	border-color: white;
-}
-
-.selectedElement {
-	background-color: #124d60 !important;
-	color: white
 }
 
 .diatomic-nonmetal {
