--- a/quiz-widgets-light.css
+++ b/quiz-widgets-light.css
@@ -1472,8 +1472,8 @@ td img {
 .tableContainer {
 	min-width: 1100px;
 	display: grid;
-	grid-template-columns: 40px repeat(auto-fit, minmax(60px, 1fr));
-	grid-template-rows: 20px repeat(8, 1fr);
+	grid-template-columns: 40px repeat(18, minmax(60px, 1fr));
+	grid-template-rows: 20px repeat(9, 1fr);
 	place-items: center;
 }
 
@@ -1557,12 +1557,12 @@ td img {
 	visibility: hidden;
 }
 
-/* specific to light mode */
 .selectedElement {
 	background-color: #124d60 !important;
 	color: white
 }
 
+/* specific to light mode */
 .diatomic-nonmetal {
 	background-color: #E2F4CD;
 }
